src/main/java/com/example/demo/entity/error/SizeError.java
package com.example.demo.entity.error;

public enum SizeError {
	ID_REQUIRED, SIZE_REQUIRED,  SIZE_ALREADY_EXISTS, SIZE_CONSTRAINT_VIOLATION,SIZE_DATA_INTEGRITY_VIOLATION;
	}


